# real-estate-investment-guru

./: .env.dist  .gitignore  All Residential for Sale Scraper.py  Makefile  Procfile  QC Apartments-condos for Sale Scraper.py  QC Multi-Family for Sale Scraper.py  QC Properties for Rent Scraper.py  db_test.py  pyproject.toml  requirements.txt
dash/: app.py
dash/assets/: styles.css
dash_app/: app.py  layout.py
data/: QC Apartments-condos for Sale Scraper.py  QC Multi-Family for Sale Scraper.py  QC Properties for Rent Scraper.py
notebooks/: modeling_playground.ipynb
project_real_estate/: constants.py  db.py
project_real_estate/dash_app/: app.py  db.py  layout.py  models.py
project_real_estate/dash_app/assets/: styles.css
project_real_estate/models/: financial_model.py  preprocessor.py  rent_estimator.py
scraper/: qc_multifamily_for_sale.py  qc_properties_for_rent.py  scraper.py
scripts/: pull_data_from_aws.py  train_model.py
serialized_models/: rent_predictor.pkl
