[tool.poetry]
name = "project-real-estate"
version = "0.1.0"
description = ""
authors = ["Pat Steeves <patricksteeves02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
pandas = "^1.0.3"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
