[tool.poetry]
name = "project-real-estate"
version = "0.1.0"
description = ""
authors = ["Pat Steeves <patricksteeves02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
pandas = "^1.0.3"
requests = "^2.23.0"
beautifulsoup4 = "^4.9.0"
sqlalchemy = "^1.3.16"
tqdm = "^4.45.0"
lxml = "^4.5.0"
psycopg2 = "^2.8.5"
dash = "^1.11.0"
gunicorn = "^20.0.4"
dash-table = "^4.6.2"
scikit-learn = "^0.22.2"
scipy = "^1.4.1"
numpy = "^1.18.3"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
